--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                     <li><a href="#faq">FAQ</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
-                <a href="https://t.me/Aliya_publication" target="_blank" class="join-btn">JOIN NOW</a>
+                <a href="https://wa.me/919079921016?text=Hello%20sir%2C%20I%20am%20interested%20in%20the%20handwriting%20project.%20Could%20you%20please%20provide%20more%20details%3F" target="_blank" class="join-btn">JOIN NOW</a>
                 <button class="mobile-menu-toggle" id="menuToggle">☰</button>
             </nav>
         </div>
@@ -639,7 +639,7 @@
             <div class="hero-content">
                 <h2>Earn From Home Through Handwriting Work</h2>
                 <p>Transform your beautiful handwriting into a steady income stream. Work for students, housewives, and anyone seeking flexible income.</p>
-                <a href="https://t.me/Aliya_publication" target="_blank" class="join-btn">JOIN TELEGRAM &amp; START</a>
+                <a href="https://wa.me/919079921016?text=Hello%20sir%2C%20I%20am%20interested%20in%20the%20handwriting%20project.%20Could%20you%20please%20provide%20more%20details%3F" target="_blank" class="join-btn">MESSAGE ON WHATSAPP</a>
             </div>
             
             <div class="hero-visuals">
@@ -705,7 +705,7 @@
                     <p>Weekly Earning: <span class="pricing-amount">₹18,000+</span></p>
                     <p>Monthly Potential: <span class="pricing-amount">₹72,000+</span></p>
                 </div>
-                <a href="https://t.me/Aliya_publication" target="_blank" class="join-btn">Get Started</a>
+                <a href="https://wa.me/919079921016?text=Hello%20sir%2C%20I%20am%20interested%20in%20the%20handwriting%20project.%20Could%20you%20please%20provide%20more%20details%3F" target="_blank" class="join-btn">Get Started</a>
             </div>
             <div class="pricing-card featured fade-in">
                 <div class="pricing-badge">POPULAR</div>
@@ -716,7 +716,7 @@
                     <p>Weekly Earning: <span class="pricing-amount">₹30,000+</span></p>
                     <p>Monthly Potential: <span class="pricing-amount">₹1,20,000+</span></p>
                 </div>
-                <a href="https://t.me/Aliya_publication" target="_blank" class="join-btn">Get Started</a>
+                <a href="https://wa.me/919079921016?text=Hello%20sir%2C%20I%20am%20interested%20in%20the%20handwriting%20project.%20Could%20you%20please%20provide%20more%20details%3F" target="_blank" class="join-btn">Get Started</a>
             </div>
             <div class="pricing-card fade-in">
                 <div class="pricing-badge">PREMIUM</div>
@@ -727,7 +727,7 @@
                     <p>Weekly Earning: <span class="pricing-amount">₹50,000+</span></p>
                     <p>Monthly Potential: <span class="pricing-amount">₹2,00,000+</span></p>
                 </div>
-                <a href="https://t.me/Aliya_publication" target="_blank" class="join-btn">Get Started</a>
+                <a href="https://wa.me/919079921016?text=Hello%20sir%2C%20I%20am%20interested%20in%20the%20handwriting%20project.%20Could%20you%20please%20provide%20more%20details%3F" target="_blank" class="join-btn">Get Started</a>
             </div>
         </div>
     </section>
@@ -739,7 +739,7 @@
             <div class="step-card fade-in">
                 <div class="step-number">1</div>
                 <h3>Register</h3>
-                <p>Join our Telegram channel and complete the simple registration process.</p>
+                <p>Message us on WhatsApp to complete the simple registration process.</p>
             </div>
             <div class="step-card fade-in">
                 <div class="step-number">2</div>
@@ -875,7 +875,7 @@
     <section class="cta-section">
         <h2 class="section-title" style="color: var(--white);">Ready to Start Earning?</h2>
         <p class="section-subtitle" style="color: rgba(255,255,255,0.9);">Join thousands of workers already earning from home</p>
-        <a href="https://t.me/Aliya_publication" target="_blank" class="join-btn" style="background: var(--white); color: var(--gold);">JOIN NOW - IT'S FREE</a>
+        <a href="https://wa.me/919079921016?text=Hello%20sir%2C%20I%20am%20interested%20in%20the%20handwriting%20project.%20Could%20you%20please%20provide%20more%20details%3F" target="_blank" class="join-btn" style="background: var(--white); color: var(--gold);">JOIN NOW - IT'S FREE</a>
     </section>
 
     <footer id="contact">
@@ -883,7 +883,7 @@
             <div class="footer-section">
                 <h3>Aliya Publication</h3>
                 <p>Empowering people to earn from home through handwriting projects since 2018.</p>
-                <p><strong>Support:</strong> @AliyaHandwritingProjects (Telegram)</p>
+                <p><strong>Support:</strong> +91 9079921016 (WhatsApp)</p>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
@@ -891,7 +891,7 @@
                 <a href="#about">About Us</a>
                 <a href="#pricing">Pricing Plans</a>
                 <a href="#faq">FAQ</a>
-                <a href="https://t.me/Aliya_publication" target="_blank" class="highlight-link">Join Now</a>
+                <a href="https://wa.me/919079921016?text=Hello%20sir%2C%20I%20am%20interested%20in%20the%20handwriting%20project.%20Could%20you%20please%20provide%20more%20details%3F" target="_blank" class="highlight-link">Join Now</a>
             </div>
             <div class="footer-section">
                 <h3>Legal</h3>
@@ -903,7 +903,7 @@
             <div class="footer-section">
                 <h3>Contact Info</h3>
                 <p>📧 contact@aliyapublication.com</p>
-                <p>📱 Support: Telegram Only</p>
+                <p>📱 Support: WhatsApp Only</p>
                 <p>🕐 24/7 Support Available</p>
             </div>
         </div>
@@ -954,7 +954,7 @@
                 const mobileJoin = document.querySelector('nav ul::after');
                 if(mobileJoin) {
                     mobileJoin.onclick = function() {
-                        window.open('https://t.me/+RsuVx2N2HgFiNzll', '_blank');
+                        window.open('https://wa.me/919079921016?text=Hello%20sir%2C%20I%20am%20interested%20in%20the%20handwriting%20project.%20Could%20you%20please%20provide%20more%20details%3F', '_blank');
                     }
                 }
             }
